<resources>
    <string name="app_name">CaldasTuristAPP</string>
    <string name="titulo">Turistas en Caldas</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="passwordConfirm">Repetir Contraseña</string>
    <string name="eMail">Correo</string>
    <string name="cancel">Cancelar</string>
    <string name="miperfil">Mi Perfil</string>
    <string name="cerrarSesion">Cerrar Sesion</string>
    <string name="bienvenida">Caldas TuristAPP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="holtel1">Hotel Caldas Plaza</string>
    <string name="holtel2">Hotel Plaza Garibaldi</string>
    <string name="title_activity_hotel">Hoteles</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="description1">El hotel de Caldas por Tradicion</string>
    <string name="price1">$ 45.000</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_bares">BaresActivity</string>
    <string name="hoteles">Hoteles</string>
    <string name="bares">Bares</string>
    <string name="rest">Restaurantes</string>
    <string name="title_activity_bar">Bares</string>
    <string name="bar2">PUB Springfield</string>
    <string name="title_activity_restaurante">RestauranteActivity</string>
    <string name="bar1">Varsovia</string>
    <string name="bar3">Fonda La Mulera</string>
    <string name="holtel3">Hotel Central</string>
    <string name="restaurante1">Aymará</string>
    <string name="restaurante2">Donde Cheché</string>
    <string name="restaurante3">Ajedréz Pizza</string>
    <string name="ppal">Principal</string>
    <string name="registro">Registrarse</string>
    <string name="descrip">El Municipio de Caldas está situado al sur de la ciudad de Medellín, es la puerta de entrada, tanto hacia el sur del Valle de Aburrá como al suroeste Antioqueño.</string>
    <string name="regist">Registro</string>
    <string name="saludo">Conozca el municipio de Caldas</string>
    <string name="title_activity_hotel_d">HotelDActivity</string>
</resources>
