<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:layout_margin="10dp">


    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/logo"
        android:id="@+id/iFoto"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/holtel1"
            android:textColor="@color/brown"
            android:textSize="25sp"
            android:id="@+id/tNombre"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description1"
            android:textColor="@color/green"
            android:id="@+id/tDescript"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price1"
            android:textAlignment="textEnd"
            android:id="@+id/tPrice"
            android:paddingRight="10dp"/>

    </LinearLayout>

</LinearLayout>